some spacing fixes

--- a/second version/styles.css
+++ b/second version/styles.css
@@ -29,7 +29,6 @@ body {
     position: relative;
     height: 50vw;
     overflow: auto;
-    margin-bottom: 30px;
 }  
 
 
@@ -48,7 +47,7 @@ body {
     box-shadow: var(--box);
     padding: 20px;
     border-radius: 10px;
-    height: 300px;
+    height: 30vh;
 }
 
 .kortti:hover {
@@ -57,7 +56,7 @@ body {
     box-shadow: 0 0 7px 6px rgb(240, 240, 240);
     padding: 20px;
     border-radius: 10px;
-    height: 400px;
+    height: 40vh;
 }
 
 #first {
@@ -126,7 +125,6 @@ body {
 #contact {
     background-color: var(--card-col);
     text-align: center;
-    padding-top: 10px;
     padding-bottom: 50px;
     color: var(--text-col);
     border-radius: 15px;
@@ -187,24 +185,28 @@ footer p {
   }
 
  
-  /* lnik colors */
+  /* link colors */
 
 
   a:visited {  color: white;}a:hover {  color: rgba(197, 145, 178, 1.0);}a:active {  color: whitesmoke;}
 
 
 
+/* technologies tab */
 
 
 
 #technologies {
     display: grid;
     grid-template-columns: auto auto auto;
-    column-gap: 20px;
+    column-gap: 30px;
     row-gap: 20px;
-    max-width: 100vw;
+    width: 95vw; /* Ensures the grid spans the full viewport width */
+    margin: 0; /* Removes any margin around the grid */
+    padding: 20px 0; /* Add vertical padding only */
     overflow-x: hidden;
     margin: 0 auto;
+    padding: 20px;
   }
   
   .image1 {
@@ -243,16 +245,17 @@ footer p {
   
   
   .language {
-    background-color: rgba(187, 209, 207, 0.8);
+    background-color: var(--card-col);
     padding: 20px;
     font-size: 30px;
+    color: var(--text-col);
     text-align: center;
     border-radius: 10px;
     border: #333 1px solid;
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 5px 5px 8px lightgray;
+    box-shadow: 0 0 5px 3px lightgray;
   }
   
   
